--- a/apps/emqx/etc/emqx.conf
+++ b/apps/emqx/etc/emqx.conf
@@ -1605,3 +1605,12 @@ example_common_websocket_options {
     client_max_window_bits = 15
   }
 }
+
+persistent_session_store {
+    ## Enable/disable internal persistent session store.
+    ##
+    ## @doc persistent_session_store.enabled
+    ## ValueType: Boolean
+    ## Default: true
+    enabled = false
+}
