--- a/apps/emqx/etc/emqx.conf
+++ b/apps/emqx/etc/emqx.conf
@@ -1611,6 +1611,27 @@ persistent_session_store {
     ##
     ## @doc persistent_session_store.enabled
     ## ValueType: Boolean
-    ## Default: true
+    ## Default: false
     enabled = false
+
+    ## How long are undelivered messages retained in the store
+    ##
+    ## @doc persistent_session_store.max_retain_undelivered
+    ## ValueType: Duration
+    ## Default: 1h
+    max_retain_undelivered = 1h
+
+    ## The time interval in which to try to run garbage collection of persistent session messages
+    ##
+    ## @doc persistent_session_store.message_gc_interval
+    ## ValueType: Duration
+    ## Default: 1h
+    message_gc_interval = 1h
+
+    ## The time interval in which to try to run garbage collection of persistent session transient data
+    ##
+    ## @doc persistent_session_store.session_message_gc_interval
+    ## ValueType: Duration
+    ## Default: 1m
+    session_message_gc_interval = 1m
 }
